--- a/src/App.sass
+++ b/src/App.sass
@@ -1,2 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500;600;800&display=swap')
+  
 .app
+  font-family: 'Manrope', sans-serif
   text-align: center
+  background-image: url(./assets/bg-pattern.svg)
+  background-repeat: no-repeat
+  background-position: 5% 0%
+  height: 100vh
+  padding: 20px 20px
+
+  .titleContainer
+    background-image: url(./assets/pattern-circles.svg)
+    background-repeat: no-repeat
+    background-position: center
+    background-size: 200px
+    padding: 60px 0
+
+    .title
+      color: hsl(227, 35%, 25%)
+      font-size: 22px
+      
+    .subTitle
+      color: hsl(225, 20%, 60%)
+      font-size: 16px
+      font-weight: 500
