--- a/src/App.sass
+++ b/src/App.sass
@@ -1,26 +1,150 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500;600;800&display=swap')
+
+$textLight: #858fad
+$textDark: #293356
+$fullSliderBar: #a5f3eb
+$sliderBackground: #10d5c2
+$discountBackground: #feece7
+$discountText: #ff8c66
+$ctaText: #bdccff
+
+$pricingBackground: #ffffff
+$mainBackground: #fafbff
+$emptySliderBar: #eaeefb
+$toggleBackground: #cdd7ee
+$ctaBackground: #293356
   
 .app
+  background: #f9faff
   font-family: 'Manrope', sans-serif
   text-align: center
   background-image: url(./assets/bg-pattern.svg)
   background-repeat: no-repeat
   background-position: 5% 0%
-  height: 100vh
-  padding: 20px 20px
+  padding: 60px 20px
 
   .titleContainer
     background-image: url(./assets/pattern-circles.svg)
     background-repeat: no-repeat
     background-position: center
     background-size: 200px
-    padding: 60px 0
+    padding: 80px 0
 
     .title
-      color: hsl(227, 35%, 25%)
+      color: $textDark
       font-size: 22px
       
     .subTitle
-      color: hsl(225, 20%, 60%)
+      color: $textLight
       font-size: 16px
       font-weight: 500
+
+  .cardContainer
+    background: $pricingBackground
+    border-radius: 12px
+    padding: 50px 30px
+    box-shadow: 0px 20px 25px -5px rgba(0,0,0,0.1) , 0px 10px 10px -5px rgba(0,0,0,0.04)
+
+    .topContainer
+  
+      .pageViews
+        color: $textLight
+        font-size: 20px
+        margin: 0 0 40px 0
+
+      .borderLine
+        border-bottom: 1px solid #cdd7ee
+
+    .priceContainer
+      display: flex
+      align-items: center
+      justify-content: center
+      margin: 20px 0 20px 0
+
+      .price
+        color: $textDark
+        margin-right: 10px
+
+      .month
+        color: $textLight
+        font-weight: 800
+
+    .toggleContainer
+      color: $textLight
+      display: flex
+      align-items: center
+      justify-content: center
+      margin: 0 0 40px 0
+
+      .monthlyBilling
+
+      .toggleButton
+        margin: 0 20px
+        .yearlyBilling
+
+      .a
+        display: flex
+
+      .discount
+        background: $discountBackground
+        color: $discountText
+        font-size: 15px
+        font-weight: 800
+        border-radius: 120px
+        padding: 3px 10px
+        margin-left: 10px
+
+
+  .bottomContainer
+    .checkmark
+      color: $textLight
+      margin: 40px 0 40px 0
+      p
+        img
+          height: 12px
+          width: 12px
+          margin-right: 10px
+
+    .startTrial
+      font-size: 18px
+      font-weight: 800
+      background: $textDark
+      color: $ctaText
+      border-style: none
+      border-radius: 40px
+      padding: 15px 60px
+
+// Customise toggle button
+.toggle
+  margin: 0 20px
+
+.toggle.react-toggle--checked:hover:not(.react-toggle--disabled) .react-toggle-track
+  background-color: $fullSliderBar
+
+.toggle.react-toggle--checked:hover:not(.react-toggle--enabled) .react-toggle-track
+  background-color: $fullSliderBar
+
+.toggle.react-toggle--checked .react-toggle-track
+  background-color: $toggleBackground
+
+.toggle .react-toggle-track
+  background-color: $toggleBackground
+
+.toggle.react-toggle:hover:not(.react-toggle--disabled) .react-toggle-track
+  background-color: $fullSliderBar
+
+.toggle.react-toggle .react-toggle-thumb
+  top: 3px
+  left: 4px
+  height: 18px
+  width: 18px
+  border: none
+
+.toggle.react-toggle--checked .react-toggle-thumb
+  left: 28px
+
+.toggle.react-toggle--focus .react-toggle-thumb
+  box-shadow: none
+
+.toggle.react-toggle:active:not(.react-toggle--disabled) .react-toggle-thumb
+  box-shadow: none
