Fix center toggleContainer

--- a/src/App.sass
+++ b/src/App.sass
@@ -77,6 +77,12 @@ $ctaBackground: #293356
       margin: 0 0 40px 0
 
       .monthlyBilling
+        flex: 1
+        text-align: right
+
+      .yearlyBilling
+        flex: 1
+        text-align: left
 
       .toggleButton
         margin: 0 20px
