--- a/src/App.sass
+++ b/src/App.sass
@@ -119,6 +119,8 @@ $ctaBackground: #293356
       border-style: none
       border-radius: 40px
       padding: 15px 60px
+      &:hover
+        color: #fff
 
 // Customise toggle button
 .toggle
@@ -154,3 +156,58 @@ $ctaBackground: #293356
 
 .toggle.react-toggle:active:not(.react-toggle--disabled) .react-toggle-thumb
   box-shadow: none
+
+@media screen and ( min-width: 768px )
+  .app
+    background-size: auto
+
+    .titleContainer
+
+      .title
+        font-size: 28px
+
+    .cardContainer
+      max-width: 500px
+      padding: 30px 60px
+      margin: 0 auto
+
+      .topContainer
+        display: grid
+        grid-template-columns: repeat(2, 1fr)
+        grid-template-rows: 1fr 60px 1fr
+
+        .pageViews
+          grid-column: 1 / 2
+          grid-row: 1 / 2
+          display: flex
+          align-items: center
+          margin: 0
+
+        .rc-slider
+          grid-column: 1 / 3
+          grid-row: 2 / 3
+
+        .priceContainer
+          grid-column: 2 / 3
+          grid-row: 1 / 2
+          justify-content: flex-end
+          margin: 0
+
+        .toggleContainer
+          grid-column: 1 / 3
+          grid-row: 3 / 4
+
+        .borderLine
+          grid-column: 1 / 3
+          grid-row: 4
+          
+
+      .bottomContainer
+        display: flex
+        align-items: center
+        justify-content: space-between
+        padding: 30px 0 0 0
+
+        .checkmark
+          text-align: left
+          margin: 0
