--- a/src/App.sass
+++ b/src/App.sass
@@ -159,7 +159,7 @@ $ctaBackground: #293356
 
 @media screen and ( min-width: 768px )
   .app
-    background-size: auto
+    background-size: contain
 
     .titleContainer
 
